.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Execution_Defect__c.object
<CustomObject>
    <fields>
        <fullName>provar__Defect_Impact__c</fullName>
        <formula>TEXT( provar__Defect__r.provar__Impact__c )</formula>
        <label>Defect Impact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Defect_Priority__c</fullName>
        <formula>TEXT( provar__Defect__r.provar__Priority__c )</formula>
        <label>Defect Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Defect_Status__c</fullName>
        <formula>TEXT( provar__Defect__r.provar__Status__c )</formula>
        <label>Defect Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Defect__c</fullName>
        <label>Defect</label>
        <referenceTo>provar__Defect__c</referenceTo>
        <relationshipLabel>Test Executions</relationshipLabel>
        <relationshipName>Test_Execution_Defects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Test_Execution__c</fullName>
        <label>Test Execution</label>
        <referenceTo>provar__Test_Execution__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Test_Execution_Defects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Test_Step_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Step Execution</label>
        <referenceTo>provar__Test_Step_Execution__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Test_Execution_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Execution Defect</label>
    <nameField>
        <displayFormat>TED-{000000}</displayFormat>
        <label>Test Execution Defect Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Execution Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>